--- a/app/src/main/res/layout/activity_view_match.xml
+++ b/app/src/main/res/layout/activity_view_match.xml
@@ -4,56 +4,94 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="match_parent"
         tools:context=".Activities.ViewMatchActivity">
+    <TextView
+            android:id="@+id/tv_winner"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:textSize="45sp"
+            android:textStyle="bold"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+    />
+
+    <TextView
+            android:id="@+id/tv_date"
+            android:gravity="center"
+            android:paddingTop="30dp"
+            android:textSize="35sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+    />
+
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:textSize="16dp"
-                android:gravity="center"
-                android:text="Ganador:"/>
-        <TextView
-                android:id="@+id/tv_winner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-        />
-        <TextView
-                android:id="@+id/tv_team1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-        />
-        <TextView
-                android:id="@+id/tv_team2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-        />
-        <TextView
-                android:id="@+id/tv_score1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-        />
-        <TextView
-                android:id="@+id/tv_score2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-        />
-        <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-        />
+            android:paddingTop="100dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
+
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+        android:layout_weight="1" android:layout_gravity="center" android:orientation="vertical"
+        >
+            <TextView
+                    android:id="@+id/tv_team1"
+                    android:layout_width="wrap_content"
+                    android:gravity="center"
+                    android:paddingLeft="35dp"
+                    android:paddingTop="35dp"
+                    android:text="dummy"
+                    android:textSize="40sp"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+            />
+            <TextView
+                    android:id="@+id/tv_score1"
+                    android:gravity="center"
+                    android:text="dummy"
+                    android:paddingLeft="50dp"
+                    android:paddingTop="50dp"
+                    android:textStyle="bold"
+                    android:textSize="35sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+            />
+
+
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+                      android:layout_weight="1" android:layout_gravity="center" android:orientation="vertical"
+        >
+            <TextView
+                    android:id="@+id/tv_team2"
+                    android:paddingLeft="35dp"
+                    android:paddingTop="35dp"
+                    android:text="dummy"
+                    android:textSize="40sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+            />
+
+            <TextView
+                    android:id="@+id/tv_score2"
+                    android:paddingLeft="50dp"
+                    android:paddingTop="50dp"
+                    android:textStyle="bold"
+                    android:textSize="35sp"
+                    android:text="dummy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+            />
+        </LinearLayout>
+
 
     </LinearLayout>
 
